# libLodestone

./: .clang-format  .clang-tidy  .gdbinit  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Cargo.toml  README.md  readme.md
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/common/src/io/: mod.rs
crates/common/src/level/: region.rs
crates/common/src/types/: color.rs  hashmap_ext.rs  mod.rs  vec2i.rs  vec3i.rs
crates/common/src/util/: mod.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/tests/: native.rs
crates/java/: Cargo.toml
crates/java/src/: lib.rs
crates/java/src/alpha/: inf_624.rs  mod.rs
crates/java/src/anvil/: mod.rs  version.rs
crates/java/src/classic/: classic_world.rs  mcgalaxy_lvl.rs  mine_v1.rs  mine_v2.rs  mod.rs
crates/java/src/indev/: mod.rs
crates/java/src/mcregion/: mod.rs
crates/java/tests/: alpha_tests.rs  anvil_tests.rs  classic_tests.rs  indev_tests.rs  region_tests.rs  test_utils.rs
crates/level/: Cargo.toml  build.rs
crates/level/src/: lib.rs
crates/level/src/assets/: block_mappings.json  material_colors.json
crates/level/src/block/: internal_blocks.rs  material.rs  mod.rs  palette.rs  registry.rs
crates/level/src/entity/: block_entity.rs  mod.rs
crates/level/src/level/: chunk.rs  chunk_section.rs  level.rs  metadata.rs  mod.rs  region.rs
crates/pocket/: Cargo.toml
crates/pocket/src/: lib.rs
crates/pocket/src/alpha/: alpha_081.rs  mod.rs
crates/pocket/tests/: alpha_081_tests.rs
examples/parse_mine_v2/: Cargo.toml  index.html
examples/parse_mine_v2/js-src/: main.js  parsing_worker.js
examples/parse_mine_v2/src/: lib.rs
projects/Common/: CMakeLists.txt
projects/Common/include/: Bounds.h  Constants.h  Lodestone.h  OperatorStringBuilder.h  StringSerializable.h  Vector3.h
projects/Common/include/Lodestone.Common/: Constants.h  Defines.h  Indexing.h  Lodestone.h  LodestoneCommon.h  Logging.h  Math.h
projects/Common/src/: Lodestone.cpp  LodestoneCommon.cpp  Math.cpp
projects/Common/src/String/: OperatorStringBuilder.cpp
projects/Common/src/io/: DataBuffer.cpp
projects/Common/src/string/: OperatorStringBuilder.cpp
projects/Conversion/: CMakeLists.txt
projects/Conversion/include/Lodestone.Conversion/: Identifiers.h
projects/Conversion/src/block/: BlockIO.cpp  VersionedBlockIO.cpp
projects/Conversion/src/chunk/: ChunkIO.cpp  ChunkIORegistry.cpp
projects/Conversion/src/level/: LevelIO.cpp  LevelIORegistry.cpp
projects/Conversion/src/player/: PlayerIORegistry.cpp
projects/Conversion/src/region/: RegionIORegistry.cpp
projects/Conversion/src/world/: WorldIO.cpp  WorldIORegistry.cpp
projects/Converters/Minecraft/: CMakeLists.txt
projects/Converters/Minecraft/Common/: CMakeLists.txt
projects/Converters/Minecraft/Console/: CMakeLists.txt  README.md
projects/Converters/Minecraft/Java/: CMakeLists.txt  README.md
projects/Java/: CMakeLists.txt
projects/Java/include/: Main.h
projects/Java/include/Classic/: ClassicBlockIo.h  MineV1LevelIo.h
projects/Java/include/Lodestone.Java/: Identifiers.h  LodestoneJava.h  Version.h
projects/Java/src/: LodestoneJava.cpp  Main.cpp
projects/Java/src/Classic/: ClassicBlockIO.cpp  ClassicBlockIo.cpp  MineV1LevelIo.cpp
projects/Java/src/Indev/: McLevelLevelIO.cpp
projects/Java/src/indev/: McLevelLevelIO.cpp
projects/Level/: CMakeLists.txt
projects/Level/include/: Indexing.h  Level.h
projects/Level/include/Block/: Block.h  BlockState.h  Blocks.h
projects/Level/include/Chunk/: Chunk.h  ChunkCoords.h  EmptyChunk.h  LevelChunk.h
projects/Level/include/Lodestone.Level/: FiniteLevel.h  Identifiers.h  Indexing.h  Level.h
projects/Level/include/Material/: Material.h  Materials.h
projects/Level/include/Types/: Bounds.h  Color.h  Vec2i.h  Vec3i.h
projects/Level/include/World/: World.h
projects/Level/src/: FiniteLevel.cpp  Level.cpp
projects/Level/src/Block/: Block.cpp  BlockRegistry.cpp  BlockState.cpp  Blocks.cpp
projects/Level/src/Chunk/: Chunk.cpp  EmptyChunk.cpp  LevelChunk.cpp
projects/Level/src/Material/: Material.cpp  MaterialRegistry.cpp  Materials.cpp
projects/Level/src/Types/: Colors.cpp
projects/Level/src/World/: World.cpp
projects/Level/src/block/: Block.cpp  BlockRegistry.cpp
projects/Level/src/chunk/: Chunk.cpp  ChunkContainer.cpp  EmptyChunk.cpp  LevelChunk.cpp
projects/Level/src/container/: ItemContainer.cpp
projects/Level/src/entity/: Entity.cpp  LevelEntity.cpp  Player.cpp
projects/Level/src/item/: Item.cpp  ItemProperties.cpp  ItemRegistry.cpp
projects/Level/src/material/: Material.cpp  MaterialRegistry.cpp
projects/Level/src/player/: Player.cpp
projects/Level/src/region/: Region.cpp
projects/Level/src/world/: World.cpp
projects/Libraries/: CMakeLists.txt
projects/Libraries/Common/: CMakeLists.txt
projects/Libraries/Common/src/: LodestoneCommon.cpp  Math.cpp
projects/Libraries/Conversion/: CMakeLists.txt
projects/Libraries/Conversion/src/: LodestoneConversion.cpp
projects/Libraries/Core/: CMakeLists.txt
projects/Libraries/Core/src/: Lodestone.cpp
projects/Libraries/Level/: CMakeLists.txt
projects/Libraries/Level/src/: FiniteLevel.cpp  Level.cpp  LodestoneLevel.cpp
projects/Tests/: CMakeLists.txt
projects/Tests/include/Lodestone.Tests/: LodestoneTests.h  util.h
projects/Tests/src/: LodestoneTests.cpp  Tests.cpp
projects/Tests/src/tests/: MainTests.cpp
projects/Utilities/: CMakeLists.txt
projects/Utilities/Tests/: CMakeLists.txt
projects/Utilities/Tests/src/: LodestoneTests.cpp
projects/Utilities/Threading/: CMakeLists.txt
projects/Utilities/Threading/include/: Threading.h
src/common/: Cargo.toml  mod.rs
src/common/block/: mod.rs
src/common/level/: region.rs
src/common/src/: lib.rs
src/common/src/block/: mod.rs
src/common/src/io/: mod.rs
src/common/src/level/: mod.rs  region.rs
src/java/: Cargo.toml  classic_level.rs  mod.rs
src/java/classic/: mcgalaxy_lvl.rs  mod.rs
src/java/indev/: mod.rs
src/java/mcregion/: mod.rs
src/java/src/indev/: mod.rs
src/level/: Cargo.toml
src/level/src/: lib.rs
(+679 files in other folders)
