[package]
name = "libLodestone"
version = "0.4.0" # usually I've been incrementing minor ver everytime I add a new supported level format...
authors = ["Team Lodestone"]
description = "Provides reading, writing, and format conversion for most editions and versions of Minecraft."
edition = "2024"
license = "LGPL-2.1"
readme = "README.md"
repository = "https://github.com/team-lodestone/libLodestone"
homepage = "https://team-lodestone.github.io"

[workspace]
members = [
    "src/java",
    "src/common"
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.100"

lodestone_common = { path = "src/common" }
lodestone_java = { path = "src/java" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }
log = "0.4.27"
flate2 = "1.1.1"

[dev-dependencies]
wasm-bindgen-test = "0.3.50"

[profile.release]
opt-level = "s"