[package]
name = "lodestone_common"
authors = ["Team Lodestone"]
description = "libLodestone Commons crate"

edition.workspace = true
version.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true


[lib]
crate-type = ["cdylib", "rlib"]

#[features]
#default = ["dep:console_error_panic_hook"]


[dependencies]

byteorder.workspace = true
strum.workspace = true
strum_macros.workspace = true

#console_error_panic_hook = { workspace = true, optional = true }
serde = { version = "1.0.219", features = ["derive"] }
