[package]
name = "lodestone"
authors = ["Team Lodestone"]
description = "Provides reading, writing, and format conversion for most editions and versions of Minecraft."

edition.workspace = true
version.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true


[lib]
crate-type = ["cdylib", "rlib"]
#
#[features]
#default = ["dep:console_error_panic_hook"]


[dependencies]
lodestone_common.workspace = true
lodestone_java.workspace = true
lodestone_level.workspace = true

#console_error_panic_hook = { workspace = true, optional = true }
#
#[dev-dependencies]
#wasm-bindgen-test.workspace = true
