[package]
name = "lodestone_java"
authors = ["Team Lodestone"]
description = "libLodestone Java Edition crate"

edition    .workspace = true
version    .workspace = true
license    .workspace = true
readme     .workspace = true
repository .workspace = true
homepage   .workspace = true


[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["dep:console_error_panic_hook"]


[dependencies]
lodestone_common         .workspace = true
lodestone_level          .workspace = true

byteorder                .workspace = true
flate2                   .workspace = true
simdnbt                  .workspace = true
wasm-bindgen             .workspace = true

console_error_panic_hook = { workspace = true, optional = true }
wee_alloc                = { workspace = true, optional = true }
