[package]
name = "lodestone_level"
authors = ["Team Lodestone"]
description = "libLodestone Internal Level format crate"

edition.workspace = true
version.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true


[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["dep:console_error_panic_hook"]


[dependencies]
lodestone_common.workspace = true

byteorder.workspace = true
phf = { workspace = true, features = ["macros"] }
regex.workspace = true
wasm-bindgen.workspace = true

console_error_panic_hook = { workspace = true, optional = true }
wee_alloc = { workspace = true, optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_with = { workspace = true }
log = "0.4.27"
rayon = "1.10.0"
