[package]
name = "lodestone_level"
authors = ["Team Lodestone"]
description = "libLodestone Internal Level format crate"

edition.workspace = true
version.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true


[lib]
crate-type = ["cdylib", "rlib"]

#[features]
#default = ["dep:console_error_panic_hook"]


[dependencies]
lodestone_common.workspace = true

phf = { workspace = true, features = ["macros"] }

#console_error_panic_hook = { workspace = true, optional = true }
palettevec = { workspace = true }
quartz_nbt.workspace = true

serde = { version = "1.0.219", features = ["derive"] }
serde_with = { version = "3.12.0" }
rayon = "1.10.0"
