[package]
name = "lodestone_pocket"
authors = ["Team Lodestone"]
description = "libLodestone Pocket Edition crate"

edition.workspace = true
version.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lodestone_common.workspace = true
lodestone_level.workspace = true

byteorder.workspace = true
flate2.workspace = true
log.workspace = true
quartz_nbt.workspace = true

#console_error_panic_hook = { workspace = true, optional = true }
rayon = "1.10.0"
uuid = { version = "1.17.0", features = ["v4"] }
