[package]
name = "parse_mine_v2"
version = "0.1.0"
authors = ["Team Lodestone"]
license.workspace = true
edition.workspace = true
publish = false

# [lints]
# workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
js = ["dep:wasm-logger", "dep:console_error_panic_hook"]

[dependencies]
lodestone_java  .workspace = true

log             .workspace = true
wasm-bindgen    .workspace = true
wasm-logger     = { workspace = true, optional = true }

console_error_panic_hook = { workspace = true, optional = true }

# wasm-bindgen-futures = { workspace = true, optional = true }

# web-sys              = { workspace = true, optional = true, features = [
#     "Document", "File", "FileList", "Element", "Event", "Window", "HtmlInputElement"
# ]}
